# secwexen-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: basic_usage.md  installation.md  usage.md
examples/: defensive_demo.py  offensive_demo.py  osint_demo.py
tests/: test_core.py
tools/automation/bash/: auto_backup.sh  cleanup.sh  deploy_script.sh
tools/automation/powershell/: Auto-Deploy.ps1  Sync-Drives.ps1
tools/defensive/bash/: check_integrity.sh  monitor_logs.sh
tools/defensive/python/: firewall_watcher.py
tools/osint/python/: username_lookup.py
utils/: file_ops.py  logger.py  validators.py
