[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secwexen-toolkit"
version = "1.0.0"
description = "A modular offensive, defensive, OSINT and automation security toolkit."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "secwexen" }
]

keywords = [
    "security",
    "pentest",
    "offensive-security",
    "defensive-security",
    "osint",
    "automation",
    "toolkit"
]

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests",
    "rich",
    "colorama",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/secwexen/secwexen-toolkit/"
Documentation = "https://github.com/secwexen/secwexen-toolkit/tree/main/docs"
Issues = "https://github.com/secwexen/secwexen-toolkit/issues"

[tool.setuptools.packages.find]
where = ["."]
